Update fonts, syntax highlighting, and images

--- a/styles/prism.css
+++ b/styles/prism.css
@@ -9,7 +9,7 @@ code[class*="language-"],
 pre[class*="language-"] {
 	background: #27212e;
 	color: #ffffff;
-	font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace; /* this is the default */
+	font-family: "Fira Code", monospace; /* this is the default */
 	/* The following properties are standard, please leave them as they are */
 	font-size: 1em;
 	direction: ltr;
