--- a/styles/style.css
+++ b/styles/style.css
@@ -124,6 +124,7 @@ a:hover {
     font-size: 14px;
     line-height: 1.6;
     min-height: 0;
+    max-height: 100%;
     padding-top: 20px;
     flex-direction: column;
 }
@@ -270,6 +271,9 @@ hr {
 }
 
 @media screen and (max-width: 800px) {
+    .container {
+        min-width: 100%;
+        overflow: hidden;
     .nav-bar
     {
         display: none;
