--- a/styles/style.css
+++ b/styles/style.css
@@ -94,9 +94,9 @@ a:hover {
 /* Foooter section END */
 
 .markdown-rendered {
-    font-size: 18px;
+    font-size: 1.5em;
     line-height: 1.6em;
-    width: 740px;
+    min-width: 100%;
     background-color: var(--background-primary);
     color: var(--text-normal);
     font-family: var(--default-font);
