--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,7 @@ a:hover {
     background-color: var(--background-primary);
     color: var(--text-normal);
     font-family: var(--default-font);
-    padding: 15px 30px;
+    padding: 1rem 1rem;
 }
 
 .markdown-rendered code {
