Make content responsive with flexbox

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,11 @@ a:hover {
     color: var(--text-accent-hover);
 }
 
+
 .container {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
     height: 100%;
     position: relative;
