--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ a:hover {
 /* Foooter section END */
 
 .markdown-rendered {
-    font-size: 1em;
+    font-size: 1rem;
     line-height: 1.6em;
     min-width: 100%;
     overflow: auto;
